--- a/PartGoals.html
+++ b/PartGoals.html
@@ -60,10 +60,10 @@
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon">&#9776;</label>
     <ul class="menu">
-      <li><a class="home" href="file:///C:/Users/INTEL-PC/Desktop/My%20Personal%20website/index.html#">Home</a></li>
-      <li><a class="skill" href="file:///C:/Users/INTEL-PC/Desktop/My%20Personal%20website/PartSkills.html">Skills</a></li>
-      <li><a class="goal" href="file:///C:/Users/INTEL-PC/Desktop/My%20Personal%20website/PartGoals.html">Goals</a></li>
-      <li><a class="contact" href="file:///C:/Users/INTEL-PC/Desktop/My%20Personal%20website/PartContact.html">Contact</a></li>
+      <li><a class="home" href="index.html">Home</a></li>
+      <li><a class="skill" href="PartSkills.html">Skills</a></li>
+      <li><a class="goal" href="PartGoals.html">Goals</a></li>
+      <li><a class="contact" href="PartContact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
